entity/preprocess/noparse.go

//line noparse.rl:1
package preprocess

func NoParse(data []byte) bool {

  
//line noparse.go:9
const noparse_start int = 0
const noparse_first_final int = 82
const noparse_error int = -1

const noparse_en_main int = 0


//line noparse.rl:8


  cs, p, pe, eof := 0, 0, len(data), len(data)
  _ = eof
	_ = noparse_first_final
	_ = noparse_error
	_ = noparse_en_main

  var match bool


  
//line noparse.go:30
	{
	cs = noparse_start
	}

//line noparse.go:35
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 82:
		goto st_case_82
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 83:
		goto st_case_83
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 84:
		goto st_case_84
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 85:
		goto st_case_85
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	}
	goto st_out
	st_case_0:
		switch data[p] {
		case 32:
			goto st2
		case 67:
			goto st56
		case 73:
			goto st4
		case 78:
			goto st65
		case 85:
			goto st68
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 98:
			goto st17
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 105:
			goto st5
		case 110:
			goto st32
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 110:
			goto st32
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 78:
			goto st7
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 32:
			goto st2
		case 65:
			goto st8
		case 73:
			goto st4
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 66 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch data[p] {
		case 73:
			goto st4
		case 105:
			goto st10
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st10
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
tr15:
//line noparse.rl:20
match = true
	goto st82
	st82:
		if p++; p == pe {
			goto _test_eof82
		}
	st_case_82:
//line noparse.go:512
		switch data[p] {
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st10
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st10
		case 110:
			goto st11
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		switch data[p] {
		case 73:
			goto st4
		case 82:
			goto st6
		case 99:
			goto st12
		case 105:
			goto st10
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 46:
			goto tr19
		case 73:
			goto st4
		case 82:
			goto st6
		case 101:
			goto st51
		case 105:
			goto st10
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
tr19:
//line noparse.rl:20
match = true
	goto st83
	st83:
		if p++; p == pe {
			goto _test_eof83
		}
	st_case_83:
//line noparse.go:685
		switch data[p] {
		case 32:
			goto tr19
		case 73:
			goto st4
		case 82:
			goto st6
		case 83:
			goto st13
		case 105:
			goto st10
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 33 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr19
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 101:
			goto st14
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 100:
			goto st15
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch data[p] {
		case 32:
			goto st2
		case 46:
			goto st16
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st50
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 32:
			goto tr25
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 33 <= data[p] && data[p] <= 47 {
					goto tr26
				}
			case data[p] >= 9:
				goto tr25
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr26
				}
			default:
				goto tr26
			}
		default:
			goto tr26
		}
		goto st1
tr25:
//line noparse.rl:20
match = true
	goto st84
	st84:
		if p++; p == pe {
			goto _test_eof84
		}
	st_case_84:
//line noparse.go:860
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 98:
			goto st17
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 97:
			goto st18
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 99:
			goto st19
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 116:
			goto st45
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 104:
			goto st21
		case 105:
			goto st5
		case 108:
			goto st41
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 121:
			goto st22
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 116:
			goto st23
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 111:
			goto st24
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st25
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 104:
			goto st21
		case 105:
			goto st5
		case 108:
			goto st26
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 97:
			goto st27
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 115:
			goto st28
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 109:
			goto st29
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 97:
			goto st16
		case 105:
			goto st30
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 100:
			goto st31
		case 105:
			goto st5
		case 110:
			goto st32
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 32:
			goto tr25
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 115:
			goto st16
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 33 <= data[p] && data[p] <= 47 {
					goto tr26
				}
			case data[p] >= 9:
				goto tr25
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr26
				}
			default:
				goto tr26
			}
		default:
			goto tr26
		}
		goto st1
tr26:
//line noparse.rl:20
match = true
	goto st85
	st85:
		if p++; p == pe {
			goto _test_eof85
		}
	st_case_85:
//line noparse.go:1335
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 99:
			goto st33
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		switch data[p] {
		case 32:
			goto st2
		case 46:
			goto st34
		case 73:
			goto st4
		case 82:
			goto st6
		case 101:
			goto st37
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		switch data[p] {
		case 32:
			goto st35
		case 73:
			goto st4
		case 82:
			goto st6
		case 83:
			goto st13
		case 105:
			goto st5
		case 112:
			goto st20
		case 115:
			goto st36
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st35
		}
		goto st1
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		switch data[p] {
		case 32:
			goto st35
		case 73:
			goto st4
		case 82:
			goto st6
		case 83:
			goto st13
		case 98:
			goto st17
		case 105:
			goto st5
		case 112:
			goto st20
		case 115:
			goto st36
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st35
		}
		goto st1
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 101:
			goto st14
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 114:
			goto st38
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 116:
			goto st39
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 97:
			goto st40
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 101:
			goto st34
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 97:
			goto st42
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 115:
			goto st43
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 109:
			goto st44
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st30
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 101:
			goto st46
		case 105:
			goto st5
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 112:
			goto st20
		case 114:
			goto st47
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st48
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 110:
			goto st32
		case 112:
			goto st20
		case 117:
			goto st49
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 109:
			goto st16
		case 112:
			goto st20
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
		switch data[p] {
		case 32:
			goto st2
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st5
		case 110:
			goto st32
		case 112:
			goto st20
		case 115:
			goto st16
		}
		switch {
		case data[p] > 13:
			if 65 <= data[p] && data[p] <= 90 {
				goto st3
			}
		case data[p] >= 9:
			goto st2
		}
		goto st1
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
		switch data[p] {
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st10
		case 114:
			goto st52
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
		}
		goto st9
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
		switch data[p] {
		case 73:
			goto st4
		case 82:
			goto st6
		case 105:
			goto st10
		case 116:
			goto st53
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr15
				}
			case data[p] >= 9:
				goto tr15
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st3
				}
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr15
				}
			default:
				goto tr15
			}
		default:
			goto tr15
